--- a/demo/demo.css
+++ b/demo/demo.css
@@ -32,7 +32,7 @@ body {
 }
 
 #top-bg-tile {
-  background-image: url('../images/pixelbg.png');
+  background-image: url('http://www.firepad.io/images/pixelbg.png');
   width: 100%;
   height: 100%;
 }
@@ -41,14 +41,14 @@ body {
   position: absolute;
   left: 30px;
   top: 40px;
-  background-image: url('../images/firepad-demo.png');
+  background-image: url('http://www.firepad.io/images/firepad-demo.png');
   width: 174px;
   height: 38px;
 }
 
 #create-pad {
   position: absolute;
-  background-image: url('../images/create-pad.png');
+  background-image: url('http://www.firepad.io/images/create-pad.png');
   width: 190px;
   height: 41px;
   right: 30px;
@@ -56,7 +56,7 @@ body {
 }
 
 #create-pad:active {
-  background-image: url('../images/create-pad-pressed.png');
+  background-image: url('http://www.firepad.io/images/create-pad-pressed.png');
 }
 
 #firepad-container {
@@ -148,7 +148,7 @@ body {
   bottom: 30px;
   width: 129px;
   height: 34px;
-  background-image: url('../images/powered-by-firebase-dim.png');
+  background-image: url('http://www.firepad.io/images/powered-by-firebase-dim.png');
 }
 
 #url {
