A bunch of work on the docs page.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -22,14 +22,15 @@
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="../demo/">Demo</a>
+          <a href="http://demo.firepad.io/">Demo</a>
         </div>
         <div id="logo-small"></div>
         <div id="page-title">Documentation</div>
         <div id="page-links">
-          <a href="#embedding">Embedding Guide</a> |
-          <a href="#api">Firepad API</a> |
-          <a href="#extending">Extending Firepad</a>
+          <a href="#embedding">Embedding</a> |
+          <a href="#api">API</a> |
+          <a href="#firebase">Firebase Data</a> |
+          <a href="#extending">Extending</a>
         </div>
         <a href="https://github.com/firebase/firepad" id="download-on-github"><img src="../images/download.png"></a>
       </div>
@@ -40,6 +41,16 @@
     <div id="bottom-container">
       <div id="docs-content">
         {{ content }}
+      </div>
+    </div>
+    <div id="footer">
+      <div id="footer-links">
+        <a href="index.html">Home</a>
+        <a href="https://github.com/firebase/firepad">GitHub Project</a>
+        <a href="mailto:firepad@firebase.com">Contact</a>
+      </div>
+      <div id="powered-by-firebase">
+        <a href="https://www.firebase.com/"><img src="images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
