More tweaks to docs / website.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -22,7 +22,7 @@
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
           <a href="../docs/">Documentation</a>
-          <a href="http://demo.firepad.io/">Demo</a>
+          <a href="http://demo.firepad.io/" target="_blank">Demo</a>
         </div>
         <div id="logo-small"></div>
         <div id="page-title">Documentation</div>
@@ -50,7 +50,7 @@
         <a href="mailto:firepad@firebase.com">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com/"><img src="images/powered-by-firebase-dim.png"></a>
+        <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
