Various styling tweaks

--- a/css/global.css
+++ b/css/global.css
@@ -123,7 +123,6 @@ pre.prettyprint {
 /* Stuff below-the-fold (the white part) */
 /************************************************/
 #bottom {
-  border-top: 1px solid black;
   background-color: #f4f4f4;
 }
 
@@ -133,9 +132,10 @@ pre.prettyprint {
   background-color: white;
   margin: 0 auto;
   width: 960px;
-  -moz-box-shadow: 0 3px 3px #888;
-  -webkit-box-shadow: 0 3px 3px #888;
-  box-shadow: 0 3px 3px #888;
+  -moz-box-shadow: 0 0 6px 1px #bbb;
+  -webkit-box-shadow: 0 0 6px 1px #bbb;
+  box-shadow: 0 0 6px 1px #bbb;
+  z-index: 1;
 }
 
 .bottom-content {
@@ -167,7 +167,7 @@ pre.prettyprint {
 
 #powered-by-firebase {
   position: absolute;
-  top: 10px;
+  top: 16px;
   right: 10px;
 }
 
@@ -204,6 +204,7 @@ pre.prettyprint {
 
 #home-title {
   float:left;
+  text-shadow: 0 0 10px #555;
 }
 
 #home-logo {
@@ -219,6 +220,7 @@ pre.prettyprint {
   margin-top: 5px;
   font-size: 36px;
   text-align: center;
+  text-shadow: 0 0 7px #555;
 }
 
 #home-download-on-github {
@@ -276,10 +278,12 @@ pre.prettyprint {
   font-weight: bold;
   color: #333;
   padding-bottom: 5px;
+  text-decoration: none;
 }
 
 .use-link:hover {
   color: #eb8717;
+  text-decoration: underline;
 }
 
 .uses-col {
