--- a/examples/firepad-userlist.css
+++ b/examples/firepad-userlist.css
@@ -70,5 +70,6 @@
 .firepad-userlist-name {
   display: inline-block;
   vertical-align: top;
-  margin-left: 5px;
+  margin: 2px 0 0 5px;
+  font-size: 13px;
 }
