Removed border around linked images in older browsers.

--- a/css/global.css
+++ b/css/global.css
@@ -22,6 +22,9 @@ pre.prettyprint {
   margin-top: 0;
 }
 
+a img {
+  border-style: none;
+}
 
 /************************************************/
 /* Top of page (the orange fiery part) */
