Some docs tweaks.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -27,7 +27,7 @@
         <div id="logo-small"></div>
         <div id="page-title">Documentation</div>
         <div id="page-links">
-          <a href="#embedding">Embedding</a> |
+          <a href="#getting_started">Getting Started</a> |
           <a href="#api">API</a> |
           <a href="#firebase">Firebase Data</a> |
           <a href="#extending">Extending</a>
