More docs tweaks.

--- a/css/global.css
+++ b/css/global.css
@@ -26,6 +26,10 @@ a img {
   border-style: none;
 }
 
+h3 {
+  margin-top: 40px;
+}
+
 /************************************************/
 /* Top of page (the orange fiery part) */
 /************************************************/
