Documentation Pages Links Changes

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -24,7 +24,9 @@
           <a href="../docs/">Documentation</a>
           <a href="http://demo.firepad.io/" target="_blank">Demo</a>
         </div>
-        <div id="logo-small"></div>
+        <a href="../">
+          <div id="logo-small"></div>
+        </a>
         <div id="page-title">Documentation</div>
         <div id="page-links">
           <a href="#getting_started">Getting Started</a> |
@@ -45,9 +47,10 @@
     </div>
     <div id="footer">
       <div id="footer-links">
-        <a href="index.html">Home</a>
-        <a href="https://github.com/firebase/firepad">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com">Contact</a>
+        <a href="../">Home</a>
+        <a href="examples/">Examples</a>
+        <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
+        <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
         <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
