--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -48,7 +48,7 @@
     <div id="footer">
       <div id="footer-links">
         <a href="../">Home</a>
-        <a href="examples/">Examples</a>
+        <a href="../examples/">Examples</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
         <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
       </div>
