Adding Aciton.io logo

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -21,7 +21,7 @@
         <div id="header-links" class="clearfix">
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
-          <a href="../docs/">Documentation</a>
+          <a href="#" class="selected">Documentation</a>
           <a href="http://demo.firepad.io/" target="_blank">Demo</a>
         </div>
         <a href="../">
