--- a/demo/demo.css
+++ b/demo/demo.css
@@ -150,3 +150,17 @@ body {
   text-align: center;
   cursor: pointer;
 }
+
+.fb-like
+{
+  transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  -webkit-transform: scale(1.3);
+  -o-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  transform-origin: bottom left;
+  -ms-transform-origin: bottom left;
+  -webkit-transform-origin: bottom left;
+  -moz-transform-origin: bottom left;
+  -webkit-transform-origin: bottom left;
+}
