--- a/css/global.css
+++ b/css/global.css
@@ -147,16 +147,14 @@ a img {
 #top-content {
   position: relative;
   margin: 0 auto;
-  height: 190px;
+  height: 150px;
   width: 960px;
   text-align: center;
 }
 
 #download-on-github {
-  position: absolute;
-  right: 15px;
-  bottom: 15px;
-  border: 0;
+  float: right;
+  margin-top: 35px;
 }
 
 #top-shadow {
@@ -284,6 +282,77 @@ a img {
   margin-top: 40px;
   border-top: 1px solid #e0e0e0;
 }
+
+
+/************************************************/
+/* sidebar for docs & examples */
+/************************************************/
+.sidenav {
+  width: 178px;
+  margin: 30px 0 0;
+  padding: 0;
+  background-color: #fff;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  box-shadow: 0 1px 4px rgba(0,0,0,.065);
+}
+.sidenav > li > a {
+  display: block;
+  width: 150px \9;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+}
+.sidenav > li:first-child > a {
+  -webkit-border-radius: 6px 6px 0 0;
+  -moz-border-radius: 6px 6px 0 0;
+  border-radius: 6px 6px 0 0;
+}
+.sidenav > li:last-child > a {
+  -webkit-border-radius: 0 0 6px 6px;
+  -moz-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+}
+.sidenav > .active > a {
+  position: relative;
+  z-index: 2;
+  padding: 9px 15px;
+  border: 0;
+  text-shadow: 0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+}
+/* Chevrons */
+.sidenav .icon-chevron-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  opacity: .25;
+}
+.sidenav > li > a:hover {
+  background-color: #f5f5f5;
+}
+.sidenav a:hover .icon-chevron-right {
+  opacity: .5;
+}
+.sidenav .active .icon-chevron-right,
+.sidenav .active a:hover .icon-chevron-right {
+  background-image: url(../img/glyphicons-halflings-white.png);
+  opacity: 1;
+}
+.sidenav.affix {
+  top: 40px;
+}
+.sidenav.affix-bottom {
+  position: absolute;
+  top: auto;
+  bottom: 270px;
+}
+
 
 /************************************************/
 /* Footer */
@@ -496,71 +565,6 @@ a img {
   color: #f9e701;
 }
 
-.examples-sidenav {
-  width: 178px;
-  margin: 30px 0 0;
-  padding: 0;
-  background-color: #fff;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-  -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-  box-shadow: 0 1px 4px rgba(0,0,0,.065);
-}
-.examples-sidenav > li > a {
-  display: block;
-  width: 150px \9;
-  margin: 0 0 -1px;
-  padding: 8px 14px;
-  border: 1px solid #e5e5e5;
-}
-.examples-sidenav > li:first-child > a {
-  -webkit-border-radius: 6px 6px 0 0;
-  -moz-border-radius: 6px 6px 0 0;
-  border-radius: 6px 6px 0 0;
-}
-.examples-sidenav > li:last-child > a {
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-}
-.examples-sidenav > .active > a {
-  position: relative;
-  z-index: 2;
-  padding: 9px 15px;
-  border: 0;
-  text-shadow: 0 1px 0 rgba(0,0,0,.15);
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-}
-/* Chevrons */
-.examples-sidenav .icon-chevron-right {
-  float: right;
-  margin-top: 2px;
-  margin-right: -6px;
-  opacity: .25;
-}
-.examples-sidenav > li > a:hover {
-  background-color: #f5f5f5;
-}
-.examples-sidenav a:hover .icon-chevron-right {
-  opacity: .5;
-}
-.examples-sidenav .active .icon-chevron-right,
-.examples-sidenav .active a:hover .icon-chevron-right {
-  background-image: url(../img/glyphicons-halflings-white.png);
-  opacity: 1;
-}
-.examples-sidenav.affix {
-  top: 40px;
-}
-.examples-sidenav.affix-bottom {
-  position: absolute;
-  top: auto;
-  bottom: 270px;
-}
 .example-title {
   margin-top: 50px;
 }
@@ -568,10 +572,40 @@ a img {
 /************************************************/
 /* docs/ specific styles */
 /************************************************/
+
+h1 {
+  font-size: 34px;
+  color: #333;
+  margin: 20px 0;
+  padding-top: 25px;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: normal;
+  clear: both;
+}
+
+h2 {
+  font-size: 24px;
+  color: #535353;
+  margin: 10px 0;
+  padding-top: 10px;
+  font-weight: normal;
+  font-family: "Helvetica Neue", sans-serif;
+  clear: both;
+}
+
+.docs-page {
+  background: #fcfcfc;
+}
+
 #docs-content {
   padding: 30px 90px 0;
   color: #5e5e5e;
   margin-bottom: 40px;
+}
+
+.docs-page pre {
+  margin: 20px 10px;
+  padding: 15px 10px;
 }
 
 .docs-separator {
@@ -613,3 +647,4 @@ a img {
 #docs-content .emphasis-box a {
   color: #dc4700;
 }
+
