--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
   <link rel="stylesheet" href="../css/global.css" />
   <link rel="stylesheet" href="../css/borland.css" />
+  <link href="../images/favicon.ico" rel="shortcut icon" />
 </head>
 
 <body class="docs-page">
