Private Pad link on the homepage 2

--- a/css/global.css
+++ b/css/global.css
@@ -191,7 +191,7 @@ a img {
 }
 #private-firepad-link a:hover {
   text-decoration: underline;
-  color: #f9e701;
+  color: #eb8717;
 }
 
 #logo-small {
