Make sidebar nav scroll down with you.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -38,7 +38,7 @@
   <div class="container" id="docs-container">
     <div class="row">
       <div class="span3 sidebar">
-        <ul class="nav nav-list sidenav">
+        <ul class="nav nav-list sidenav" data-spy="affix" data-offset-top="150">
           <li><a href="#getting_started"><i class="icon-chevron-right"></i> Getting Started</a></li>
           <li><a href="#api"><i class="icon-chevron-right"></i> API</a></li>
           <li><a href="#firebase"><i class="icon-chevron-right"></i> Firebase Data</a></li>
@@ -102,5 +102,7 @@
     })();
 
   </script>
+  <script src="../js/jquery-1.9.1.min.js"></script>
+  <script src="../js/bootstrap-affix.js"></script>
 </body>
 </html>
