Add 404 page, remove broken image reference.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -82,7 +82,7 @@
         <a href="../">Home</a>
         <a href="../examples/">Examples</a>
         <a href="https://github.com/firebase/firepad" target="_blank">GitHub Project</a>
-        <a href="mailto:firepad@firebase.com?subject=[FirePad Question]" target="_blank">Contact</a>
+        <a href="mailto:firepad@firebase.com?subject=[Firepad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
         <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
