Add 'build something cool? we'd love to hear from you' note at bottom of docs and examples.

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -47,31 +47,9 @@
       </div>
       <div class="span9">
         {{ content }}
-        <!--
-        <section id="richtext">
-          <div class="uses-title example-title">1. Rich Text
-            <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
-          </div>
-          <p>Use Firepad's rich text features for collaborative blogging, note taking, proofreading and much more!</p>
-          <iframe class="example-container" src="richtext.html"></iframe>
-        </section>
-
-        <section id="code">
-          <div class="uses-title example-title">2. Code Editing
-            <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
-          </div>
-          <p>Combined with CodeMirror's extensive code editing features, Firepad is great for pair programming!</p>
-          <iframe class="example-container" src="code.html"></iframe>
-        </section>
-
-        <section id="userlist">
-          <div class="uses-title example-title">3. User List
-            <a href="#" class="example-view-source" target="_blank"><img src="../images/view-source.png"></a>
-          </div>
-          <p>You can easily add user presence information and other features.</p>
-          <iframe class="example-container" src="userlist.html"></iframe>
-        </section>
-        -->
+        <div class="build-something">Build something cool using Firepad?  We'd
+          love to <a href="mailto:firepad@firebase.com?subject=[Firepad]">hear from you</a>!
+        </div>
       </div>
     </div>
   </div>
