--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -24,7 +24,7 @@
           <a href="../">Home</a>
           <a href="../examples/">Examples</a>
           <a href="#" class="selected">Documentation</a>
-          <a href="http://demo.firepad.io/" class="private-firepad"></a>
+          <a href="http://demo.firepad.io/" target="_blank" class="private-firepad"></a>
         </div>
         <a href="../">
           <div id="logo-small"></div>
